--- a/cnh-projeto/src/styles/components/footer.module.css
+++ b/cnh-projeto/src/styles/components/footer.module.css
@@ -1,5 +1,5 @@
 .footerConteiner{
-    background-color: #F0E68C;
+    background:radial-gradient( rgb(19, 30, 37) 24.5%, rgb(19, 30, 37) 66%);
     padding: 2rem;
     display: flex;
     justify-content: center;
