--- a/cnh-projeto/src/styles/components/header.module.css
+++ b/cnh-projeto/src/styles/components/header.module.css
@@ -1,5 +1,5 @@
 .headerContainer{
-    background-color:#F0E68C ;
+    background-color:#ffffff ;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -21,4 +21,8 @@
 
 .headerImage{
     width: 40%;
+}
+
+.headerContainer{
+background:radial-gradient( rgb(19, 30, 37) 24.5%, rgb(19, 30, 37) 66%);
 }
