--- a/cnh-projeto/src/styles/components/menu.module.css
+++ b/cnh-projeto/src/styles/components/menu.module.css
@@ -1,21 +1,26 @@
-.menuContainer{
-    background-color: #fff;
-    display:flex;
-    justify-content: center;
+.menuContainer {
+    background-color: #f2f0eb;
+    display: flex;
+    justify-content: space-between;
     align-items: center;
     padding: 2rem;
-    gap:10rem;
     list-style: none;
-    text-decoration: none;
+    background:radial-gradient(circle at -8.9% 51.2%, rgb(255, 124, 0) 0%, rgb(255, 124, 0) 15.9%, rgb(255, 163, 77) 15.9%, rgb(255, 163, 77) 24.4%, rgb(19, 30, 37) 24.5%, rgb(19, 30, 37) 66%);
 }
 
-.menuLink{
+.menuLink {
     text-decoration: none;
-    color: #F0E68C; 
-    font-size: 1.5rem;
-    text-shadow:
-        1px 0px 1px #000000,
-        1px 0px 1px #000000,
-        1px 0px 1px #000000,
-        1px 0px 1px #000000;
+    color: #ffffff;
+    font-size: 1.5rem;   
+}
+
+.menuLogo {
+    max-width: 15%;
+    margin-left: 2%;
+    align-items: center;
+    }
+
+.menuList {
+    gap: 2rem;
+    display: flex;
 }
