--- a/cnh-projeto/src/styles/pages/sobre.module.css
+++ b/cnh-projeto/src/styles/pages/sobre.module.css
@@ -1,37 +1,42 @@
 * {
-    margin: 0;
-    box-sizing: border-box;
-    font-family: Roboto, sans-serif;
-    font-family: 'Oswald', sans-serif;
-  }
-  
-  .sobreContainer {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 4rem;
-    padding: 10rem;
-    font-size: 1.5rem;
-    background: radial-gradient(rgb(60, 70, 90) 24.5%, rgb(19, 30, 37) 66%);
-  }
-  .mapBrasil {
-    width: 50%;
-    height: auto;
-    background-size: cover;
-    justify-content: center;
-    align-items: center;
-  }
-
-.EstRn{
-  display:flex;
-
+  margin: 0;
+  box-sizing: border-box;
+  font-family: Roboto, sans-serif;
+  font-family: 'Oswald', sans-serif;
 }
 
-.subtitleSobre{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 4rem;
-    padding: 2rem;
+.sobreContainer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 4rem;
+  padding: 10rem;
+  font-size: 1.5rem;
+  background: radial-gradient(rgb(60, 70, 90) 24.5%, rgb(19, 30, 37) 66%);
+}
+
+.mapBrasil {
+  width: 50%;
+  height: auto;
+  background-size: cover;
+  justify-content: center;
+  align-items: center;
+}
+
+.buttons {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 1rem;
+}
+
+.EstadoButton {
+  font-family: 'Oswald', sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  background-color: #FF7C00;
+  color: #ffffff;
 }
