--- a/cnh-projeto/src/styles/pages/portfolio.module.css
+++ b/cnh-projeto/src/styles/pages/portfolio.module.css
@@ -5,57 +5,42 @@
     font-family: 'Oswald', sans-serif;
 }
 
-
-h3 {
-    display: block;
-    font-size: 1.17em;
-    margin-block-start: 1em;
-    margin-block-end: 1em;
-    margin-inline-start: 0px;
-    margin-inline-end: 0px;
-    font-weight: bold;
-}
-
-.cardsContainer {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-    gap: 20px;
-    padding: 1rem;
-}
-
-.card {
-    background-color: #F0E68C;
-    padding: 20px;
-    border-radius: 8px;
-    text-align: center;
-    color: #000000;
-}
-
-.portfolioTitle {
-    padding: 45px; 
-    text-align: center;
-    font-size: 3rem;
-    color: #F0E68C;
-    text-shadow:
-        -1px -1px 0px #000000,
-        -1px 1px 0px #000000,
-        0px -1px 0px #000000,
-        0px 0px 0px #000000;
-}
-
-.conteinerSearch{
+.conteinerLogo{
     display: flex;
-    flex-direction: column;
+    position: relative;
 }
 
-.inputContainer{
+.logoProjeto{
+    display: flex;
+    position: absolute;
+    width: 15%;
+    border-radius: 160px;
+    top: 0%;
+    right: 1%;
+    background-color: rgb(19, 30, 37);
+}
+
+  .subtitleDirija {
+    display: flex;
     justify-content: center;
     align-items: center;
     text-align: center;
-    padding: 10px;
+    background:radial-gradient( rgb(19, 30, 37) 24.5%, rgb(19, 30, 37) 66%);
+    color: #ffffff;
+  }
+
+  .conteinerDirija{
+    display: flex;
+    justify-content: center;
+    gap: 8rem;
+    padding:10rem;
+    background-color: rgb(19, 30, 37);
+  }
+
+.cardDescription {
+    font-size: 1rem;
+    background: radial-gradient(rgb(19, 30, 37) 24.5%, rgb(19, 30, 37) 66%);
+    color: #ffffff;
+    word-wrap: break-word;
 }
 
-.inputName{
-    padding: 10px;
-    text-align: center;
-}
